Remove duplicate code in css file and Modify css code to fix the color contrast

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ nav > ul {
   font-size: 16px;
   line-height: 24px;
   margin-bottom: 12px;
-  color: #142cFF;
+  color: #142cff;
   background-color: #fff;
 }
 
@@ -144,7 +144,6 @@ nav > ul {
 
 .job-title {
   color: #303640;
-  
 }
 
 .project-year {
